--- a/ui5.yaml
+++ b/ui5.yaml
@@ -6,6 +6,7 @@ framework:
   name: SAPUI5
   version: "1.90.0"
   libraries:
+    - name: sap.f
     - name: sap.m
     - name: sap.ui.core
     - name: sap.ui.unified
